# slint-rnbo-vst

./: .gitmodules  CMakeLists.txt
resource/: Info.plist  info.json
src/: app-window.slint  controller.cpp  controller.h  main.cpp  processor.cpp  processor.h
